--- a/SwagLabs/test-output/ExtentReportResults.html
+++ b/SwagLabs/test-output/ExtentReportResults.html
@@ -53,7 +53,7 @@
 					<i class='mdi-hardware-desktop-windows'></i>
 				</li>
 				<li>
-					<span class='suite-started-time'>2024-04-12 00:24:01</span>
+					<span class='suite-started-time'>2024-04-12 08:04:59</span>
 				</li>
 				<li>
 					<span>v2.41.1</span>
@@ -83,25 +83,25 @@
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-current'> 
 							<span class='panel-name'>Total Time Taken (Current Run)</span> 
-							<span class='suite-total-time-current-value panel-lead'>0h 0m 22s+7ms</span> 
+							<span class='suite-total-time-current-value panel-lead'>0h 0m 51s+540ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s12'>
 						<div class='card suite-total-time-overall'> 
 							<span class='panel-name'>Total Time Taken (Overall)</span> 
-							<span class='suite-total-time-overall-value panel-lead'>0h 0m 22s+7ms</span> 
+							<span class='suite-total-time-overall-value panel-lead'>0h 0m 51s+540ms</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-start-time'>
 						<div class='card accent green-accent'> 
 							<span class='panel-name'>Start</span> 
-							<span class='panel-lead suite-started-time'>2024-04-12 00:23:39</span> 
+							<span class='panel-lead suite-started-time'>2024-04-12 08:04:08</span> 
 						</div> 
 					</div>
 					<div class='col l2 m4 s6 suite-end-time'>
 						<div class='card accent pink-accent'> 
 							<span class='panel-name'>End</span> 
-							<span class='panel-lead suite-ended-time'>2024-04-12 00:24:01</span> 
+							<span class='panel-lead suite-ended-time'>2024-04-12 08:04:59</span> 
 						</div> 
 					</div>
 				</div>
@@ -237,17 +237,17 @@
 						<div class='card-panel no-padding-h no-padding-v no-margin-v'>
 							<div class='wrapper'>
 								<ul id='test-collection' class='test-collection'>
-										<li class='collection-item test displayed active pass ' extentid='4352d707-61c4-4571-b3a9-c3c43940049e'>
+										<li class='collection-item test displayed active pass ' extentid='35c9749a-a289-4a1f-aec9-bfe8c9329473'>
 											<div class='test-head'>
-												<span class='test-name'>LoginFlow </span>
+												<span class='test-name'>loginFlow </span>
 												<span class='test-status label right outline capitalize pass'>pass</span>
 												<span class='category-assigned hide '></span>
 											</div>
 											<div class='test-body'>
 												<div class='test-info'>
-													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2024-04-12 00:23:50</span>
-													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2024-04-12 00:23:50</span>
-													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 0s+336ms</span>
+													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2024-04-12 08:04:36</span>
+													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2024-04-12 08:04:37</span>
+													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 1s+436ms</span>
 												</div>
 												<div class='test-desc'></div>
 												<div class='test-attributes'>
@@ -264,17 +264,17 @@
 														<tbody>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>00:23:50</td>
-																	<td class='step-details'>Element is displayed: Element:[[ChromeDriver: chrome on windows (c137bdf1653943aa9664b36f3b5f4a81)] -> xpath: //div[contains(text(), 'Swag Labs')]]</td>
+																	<td class='timestamp'>08:04:36</td>
+																	<td class='step-details'>Element is displayed: Element:[[ChromeDriver: chrome on windows (a56d2a81a99f2d7bc0b404a66cc3412b)] -> xpath: //div[contains(text(), 'Swag Labs')]]</td>
 																</tr>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>00:23:50</td>
+																	<td class='timestamp'>08:04:36</td>
 																	<td class='step-details'>Element text is matching:Swag Labs</td>
 																</tr>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>00:23:50</td>
+																	<td class='timestamp'>08:04:37</td>
 																	<td class='step-details'>Testcase passed</td>
 																</tr>
 														</tbody>
@@ -284,17 +284,17 @@
 												</div>
 											</div>
 										</li>
-										<li class='collection-item test displayed active pass ' extentid='16a7aa33-e964-4fcf-81fa-0a1a70184021'>
+										<li class='collection-item test displayed active pass ' extentid='27051439-56ea-4f51-9cf8-1e56eeada65e'>
 											<div class='test-head'>
-												<span class='test-name'>additional_Case </span>
+												<span class='test-name'>productListingVerification </span>
 												<span class='test-status label right outline capitalize pass'>pass</span>
 												<span class='category-assigned hide '></span>
 											</div>
 											<div class='test-body'>
 												<div class='test-info'>
-													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2024-04-12 00:24:00</span>
-													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2024-04-12 00:24:01</span>
-													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 1s+130ms</span>
+													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2024-04-12 08:04:48</span>
+													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2024-04-12 08:04:49</span>
+													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 0s+443ms</span>
 												</div>
 												<div class='test-desc'></div>
 												<div class='test-attributes'>
@@ -311,68 +311,65 @@
 														<tbody>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>00:24:00</td>
-																	<td class='step-details'>Selected: Price (low to high) from dropdown</td>
+																	<td class='timestamp'>08:04:49</td>
+																	<td class='step-details'>productListingVerification testcase is passed</td>
 																</tr>
 																<tr>
 																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>00:24:00</td>
-																	<td class='step-details'>Added product to the cart</td>
-																</tr>
-																<tr>
-																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>00:24:00</td>
-																	<td class='step-details'>Added product to the cart</td>
-																</tr>
-																<tr>
-																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>00:24:00</td>
-																	<td class='step-details'>Added product to the cart</td>
-																</tr>
-																<tr>
-																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>00:24:00</td>
-																	<td class='step-details'>Clicked on element:[[ChromeDriver: chrome on windows (ae89fee42498e90364cda9b584c15b6d)] -> xpath: //a[@class = 'shopping_cart_link']]</td>
-																</tr>
-																<tr>
-																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>00:24:00</td>
-																	<td class='step-details'>Clicked on element:[[ChromeDriver: chrome on windows (ae89fee42498e90364cda9b584c15b6d)] -> id: checkout]</td>
-																</tr>
-																<tr>
-																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>00:24:00</td>
-																	<td class='step-details'>Entered data:SampleFirstName in element:[[ChromeDriver: chrome on windows (ae89fee42498e90364cda9b584c15b6d)] -> id: first-name]</td>
-																</tr>
-																<tr>
-																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>00:24:00</td>
-																	<td class='step-details'>Entered data:SampleLastName in element:[[ChromeDriver: chrome on windows (ae89fee42498e90364cda9b584c15b6d)] -> id: last-name]</td>
-																</tr>
-																<tr>
-																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>00:24:00</td>
-																	<td class='step-details'>Entered data:556677 in element:[[ChromeDriver: chrome on windows (ae89fee42498e90364cda9b584c15b6d)] -> id: postal-code]</td>
-																</tr>
-																<tr>
-																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>00:24:00</td>
-																	<td class='step-details'>Clicked on element:[[ChromeDriver: chrome on windows (ae89fee42498e90364cda9b584c15b6d)] -> id: continue]</td>
-																</tr>
-																<tr>
-																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>00:24:01</td>
-																	<td class='step-details'>Clicked on element:[[ChromeDriver: chrome on windows (ae89fee42498e90364cda9b584c15b6d)] -> id: finish]</td>
-																</tr>
-																<tr>
-																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>00:24:01</td>
-																	<td class='step-details'>Element is displayed: Element:[[ChromeDriver: chrome on windows (ae89fee42498e90364cda9b584c15b6d)] -> xpath: //h2[contains(text(),'Thank you for your order!')]]</td>
-																</tr>
-																<tr>
-																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
-																	<td class='timestamp'>00:24:01</td>
+																	<td class='timestamp'>08:04:49</td>
 																	<td class='step-details'>Testcase passed</td>
+																</tr>
+														</tbody>
+													</table>
+													<ul class='collapsible node-list' data-collapsible='accordion'>
+													</ul>
+												</div>
+											</div>
+										</li>
+										<li class='collection-item test displayed active fail ' extentid='08f025d2-5c0a-4dc5-89d5-6aead8882e27'>
+											<div class='test-head'>
+												<span class='test-name'>loginFlow </span>
+												<span class='test-status label right outline capitalize fail'>fail</span>
+												<span class='category-assigned hide '></span>
+											</div>
+											<div class='test-body'>
+												<div class='test-info'>
+													<span title='Test started time' alt='Test started time' class='test-started-time label green lighten-1 text-white'>2024-04-12 08:04:58</span>
+													<span title='Test ended time' alt='Test ended time' class='test-ended-time label red lighten-1 text-white'>2024-04-12 08:04:59</span>
+													<span title='Time taken to finish' alt='Time taken to finish' class='test-time-taken label blue-grey lighten-3 text-white'>0h 0m 0s+808ms</span>
+												</div>
+												<div class='test-desc'></div>
+												<div class='test-attributes'>
+												</div>
+												<div class='test-steps'>
+													<table class='bordered table-results'>
+														<thead>
+															<tr>
+																<th>Status</th>
+																<th>Timestamp</th>
+																<th>Details</th>
+															</tr>
+														</thead>
+														<tbody>
+																<tr>
+																	<td class='status pass' title='pass' alt='pass'><i class='mdi-action-check-circle'></i></td>
+																	<td class='timestamp'>08:04:58</td>
+																	<td class='step-details'>Element is displayed: Element:[[ChromeDriver: chrome on windows (e63ecbdb54d3675ea98f94507646477d)] -> xpath: //div[contains(text(), 'Swag Labs')]]</td>
+																</tr>
+																<tr>
+																	<td class='status fail' title='fail' alt='fail'><i class='mdi-navigation-cancel'></i></td>
+																	<td class='timestamp'>08:04:58</td>
+																	<td class='step-details'>Element text is not matching - Expected:1Swag Labs Actual:Swag Labs</td>
+																</tr>
+																<tr>
+																	<td class='status fail' title='fail' alt='fail'><i class='mdi-navigation-cancel'></i></td>
+																	<td class='timestamp'>08:04:58</td>
+																	<td class='step-details'><a href='C:\Users\91998\git\SwagLabs\SwagLabs\src\test\java\Screenshots\Screenshot_Fail_12_04_2024_08_04_58.png' data-featherlight='image'><img class='report-img' src='file:///C:\Users\91998\git\SwagLabs\SwagLabs\src\test\java\Screenshots\Screenshot_Fail_12_04_2024_08_04_58.png' /></a></td>
+																</tr>
+																<tr>
+																	<td class='status fail' title='fail' alt='fail'><i class='mdi-navigation-cancel'></i></td>
+																	<td class='timestamp'>08:04:59</td>
+																	<td class='step-details'>Testcase failed</td>
 																</tr>
 														</tbody>
 													</table>
