--- a/SwagLabs/test-output/emailable-report.html
+++ b/SwagLabs/test-output/emailable-report.html
@@ -9,11 +9,15 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Suite</th></tr>
-<tr><td><a href="#t0">Test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">21,730</td><td>e2e</td><td></td></tr>
+<tr><td><a href="#t0">Test</a></td><td class="num">2</td><td class="num">0</td><td class="num">0</td><td class="num attn">1</td><td class="num">50,717</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">testcases.Scenarios</td><td><a href="#m0">LoginFlow</a></td><td rowspan="1">1712861630347</td><td rowspan="1">108</td></tr><tr class="passedeven"><td><a href="#m1">additional_Case</a></td><td rowspan="1">1712861640219</td><td rowspan="1">872</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Test &#8212; failed</th></tr><tr class="failedeven"><td rowspan="1">testcases.Scenarios</td><td><a href="#m0">purposelyFailLoginFlow</a></td><td rowspan="1">1712889298343</td><td rowspan="1">517</td></tr><tr><th colspan="4">Test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="2">testcases.Scenarios</td><td><a href="#m1">loginFlow</a></td><td rowspan="1">1712889275947</td><td rowspan="1">264</td></tr><tr class="passedeven"><td><a href="#m2">productListingVerification</a></td><td rowspan="1">1712889288957</td><td rowspan="1">201</td></tr></tbody>
 </table>
-<h2>Test</h2><h3 id="m0">testcases.Scenarios#LoginFlow</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">testcases.Scenarios#additional_Case</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Test</h2><h3 id="m0">testcases.Scenarios#purposelyFailLoginFlow</h3><table class="result"><tr><th>Exception</th></tr><tr><td><div class="stacktrace">java.lang.AssertionError: Swag Labs text is not matching expected [true] but found [false]
+	at testcases.Scenarios.purposelyFailLoginFlow(Scenarios.java:198)
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1597)
+... Removed 28 stack frames</div></td></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">testcases.Scenarios#loginFlow</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">testcases.Scenarios#productListingVerification</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
