--- a/SwagLabs/test-output/index.html
+++ b/SwagLabs/test-output/index.html
@@ -25,7 +25,7 @@
       <span class="top-banner-title-font">Test results</span>
       <button id="button" class="button">Switch Retro Theme</button> <!-- button -->
       <br/>
-      <span class="top-banner-font-1">1 suite</span>
+      <span class="top-banner-font-1">1 suite, 1 failed test</span>
     </div> <!-- top-banner-root -->
     <div class="navigator-root">
       <div class="navigator-suite-header">
@@ -39,7 +39,7 @@
         <div class="rounded-window">
           <div class="suite-header light-rounded-window-top">
             <a href="#" panel-name="suite-Suite" class="navigator-link">
-              <span class="suite-name border-passed">Suite</span>
+              <span class="suite-name border-failed">Suite</span>
             </a> <!-- navigator-link -->
           </div> <!-- suite-header light-rounded-window-top -->
           <div class="navigator-suite-content">
@@ -50,7 +50,7 @@
               <ul>
                 <li>
                   <a href="#" panel-name="test-xml-Suite" class="navigator-link ">
-                    <span>C:\Users\91998\git\SwagLabs\SwagLabs\testng-sanity.xml</span>
+                    <span>C:\Users\91998\git\SwagLabs\SwagLabs\testngSanity.xml</span>
                   </a> <!-- navigator-link  -->
                 </li>
                 <li>
@@ -92,7 +92,21 @@
               <div class="suite-section-content">
                 <ul>
                   <li>
-                    <span class="method-stats">2 methods,   2 passed</span>
+                    <span class="method-stats">3 methods, 1 failed,   2 passed</span>
+                  </li>
+                  <li>
+                    <span class="method-list-title failed">Failed methods</span>
+                    <span class="show-or-hide-methods failed">
+                      <a href="#" panel-name="suite-Suite" class="hide-methods failed suite-Suite"> (hide)</a> <!-- hide-methods failed suite-Suite -->
+                      <a href="#" panel-name="suite-Suite" class="show-methods failed suite-Suite"> (show)</a> <!-- show-methods failed suite-Suite -->
+                    </span>
+                    <div class="method-list-content failed suite-Suite">
+                      <span>
+                        <img src="failed.png" width="3%"/>
+                        <a href="#" panel-name="suite-Suite" title="testcases.Scenarios" class="method navigator-link" hash-for-method="purposelyFailLoginFlow">purposelyFailLoginFlow</a> <!-- method navigator-link -->
+                      </span>
+                      <br/>
+                    </div> <!-- method-list-content failed suite-Suite -->
                   </li>
                   <li>
                     <span class="method-list-title passed">Passed methods</span>
@@ -103,12 +117,12 @@
                     <div class="method-list-content passed suite-Suite">
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="testcases.Scenarios" class="method navigator-link" hash-for-method="LoginFlow">LoginFlow</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite" title="testcases.Scenarios" class="method navigator-link" hash-for-method="loginFlow">loginFlow</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                       <span>
                         <img src="passed.png" width="3%"/>
-                        <a href="#" panel-name="suite-Suite" title="testcases.Scenarios" class="method navigator-link" hash-for-method="additional_Case">additional_Case</a> <!-- method navigator-link -->
+                        <a href="#" panel-name="suite-Suite" title="testcases.Scenarios" class="method navigator-link" hash-for-method="productListingVerification">productListingVerification</a> <!-- method navigator-link -->
                       </span>
                       <br/>
                     </div> <!-- method-list-content passed suite-Suite -->
@@ -123,6 +137,28 @@
     <div class="wrapper">
       <div class="main-panel-root">
         <div panel-name="suite-Suite" class="panel Suite">
+          <div class="suite-Suite-class-failed">
+            <div class="main-panel-header rounded-window-top">
+              <img src="failed.png"/>
+              <span class="class-name">testcases.Scenarios</span>
+            </div> <!-- main-panel-header rounded-window-top -->
+            <div class="main-panel-content rounded-window-bottom">
+              <div class="method">
+                <div class="method-content">
+                  <a name="purposelyFailLoginFlow">
+                  </a> <!-- purposelyFailLoginFlow -->
+                  <span class="method-name">purposelyFailLoginFlow</span>
+                  <div class="stack-trace">java.lang.AssertionError: Swag Labs text is not matching expected [true] but found [false]
+	at testcases.Scenarios.purposelyFailLoginFlow(Scenarios.java:198)
+	at java.base/java.util.ArrayList.forEach(ArrayList.java:1597)
+... Removed 28 stack frames
+</div> <!-- stack-trace -->
+                  <em>
+(Purposely fails login flow for demo)                  </em>
+                </div> <!-- method-content -->
+              </div> <!-- method -->
+            </div> <!-- main-panel-content rounded-window-bottom -->
+          </div> <!-- suite-Suite-class-failed -->
           <div class="suite-Suite-class-passed">
             <div class="main-panel-header rounded-window-top">
               <img src="passed.png"/>
@@ -131,20 +167,20 @@
             <div class="main-panel-content rounded-window-bottom">
               <div class="method">
                 <div class="method-content">
-                  <a name="LoginFlow">
-                  </a> <!-- LoginFlow -->
-                  <span class="method-name">LoginFlow</span>
+                  <a name="loginFlow">
+                  </a> <!-- loginFlow -->
+                  <span class="method-name">loginFlow</span>
                   <em>
 (Checks if logo is displayed after login)                  </em>
                 </div> <!-- method-content -->
               </div> <!-- method -->
               <div class="method">
                 <div class="method-content">
-                  <a name="additional_Case">
-                  </a> <!-- additional_Case -->
-                  <span class="method-name">additional_Case</span>
+                  <a name="productListingVerification">
+                  </a> <!-- productListingVerification -->
+                  <span class="method-name">productListingVerification</span>
                   <em>
-(Checks if user is able to checkout first 3 least priced products)                  </em>
+(Checks if products are listed correctly)                  </em>
                 </div> <!-- method-content -->
               </div> <!-- method -->
             </div> <!-- main-panel-content rounded-window-bottom -->
@@ -152,7 +188,7 @@
         </div> <!-- panel Suite -->
         <div panel-name="test-xml-Suite" class="panel">
           <div class="main-panel-header rounded-window-top">
-            <span class="header-content">C:\Users\91998\git\SwagLabs\SwagLabs\testng-sanity.xml</span>
+            <span class="header-content">C:\Users\91998\git\SwagLabs\SwagLabs\testngSanity.xml</span>
           </div> <!-- main-panel-header rounded-window-top -->
           <div class="main-panel-content rounded-window-bottom">
             <pre>
@@ -160,13 +196,14 @@
 &lt;!DOCTYPE suite SYSTEM &quot;https://testng.org/testng-1.0.dtd&quot;&gt;
 &lt;suite name=&quot;Suite&quot; guice-stage=&quot;DEVELOPMENT&quot;&gt;
   &lt;test thread-count=&quot;5&quot; name=&quot;Test&quot;&gt;
-    &lt;groups&gt;
-      &lt;run&gt;
-        &lt;include name=&quot;e2e&quot;/&gt;
-      &lt;/run&gt;
-    &lt;/groups&gt;
     &lt;classes&gt;
-      &lt;class name=&quot;testcases.Scenarios&quot;/&gt;
+      &lt;class name=&quot;testcases.Scenarios&quot;&gt;
+        &lt;methods&gt;
+          &lt;include name=&quot;loginFlow&quot;/&gt;
+          &lt;include name=&quot;productListingVerification&quot;/&gt;
+          &lt;include name=&quot;purposelyFailLoginFlow&quot;/&gt;
+        &lt;/methods&gt;
+      &lt;/class&gt; &lt;!-- testcases.Scenarios --&gt;
     &lt;/classes&gt;
   &lt;/test&gt; &lt;!-- Test --&gt;
 &lt;/suite&gt; &lt;!-- Suite --&gt;
@@ -194,11 +231,11 @@
               <span class="test-group-name">e2e</span>
               <br/>
               <div class="method-in-group">
-                <span class="method-in-group-name">LoginFlow</span>
+                <span class="method-in-group-name">loginFlow</span>
                 <br/>
               </div> <!-- method-in-group -->
               <div class="method-in-group">
-                <span class="method-in-group-name">additional_Case</span>
+                <span class="method-in-group-name">purposelyFailLoginFlow</span>
                 <br/>
               </div> <!-- method-in-group -->
             </div> <!-- test-group -->
@@ -206,7 +243,15 @@
               <span class="test-group-name">positive</span>
               <br/>
               <div class="method-in-group">
-                <span class="method-in-group-name">LoginFlow</span>
+                <span class="method-in-group-name">loginFlow</span>
+                <br/>
+              </div> <!-- method-in-group -->
+              <div class="method-in-group">
+                <span class="method-in-group-name">productListingVerification</span>
+                <br/>
+              </div> <!-- method-in-group -->
+              <div class="method-in-group">
+                <span class="method-in-group-name">purposelyFailLoginFlow</span>
                 <br/>
               </div> <!-- method-in-group -->
             </div> <!-- test-group -->
@@ -214,11 +259,15 @@
               <span class="test-group-name">regression</span>
               <br/>
               <div class="method-in-group">
-                <span class="method-in-group-name">LoginFlow</span>
+                <span class="method-in-group-name">loginFlow</span>
                 <br/>
               </div> <!-- method-in-group -->
               <div class="method-in-group">
-                <span class="method-in-group-name">additional_Case</span>
+                <span class="method-in-group-name">productListingVerification</span>
+                <br/>
+              </div> <!-- method-in-group -->
+              <div class="method-in-group">
+                <span class="method-in-group-name">purposelyFailLoginFlow</span>
                 <br/>
               </div> <!-- method-in-group -->
             </div> <!-- test-group -->
@@ -226,11 +275,15 @@
               <span class="test-group-name">sanity</span>
               <br/>
               <div class="method-in-group">
-                <span class="method-in-group-name">LoginFlow</span>
+                <span class="method-in-group-name">loginFlow</span>
                 <br/>
               </div> <!-- method-in-group -->
               <div class="method-in-group">
-                <span class="method-in-group-name">additional_Case</span>
+                <span class="method-in-group-name">productListingVerification</span>
+                <br/>
+              </div> <!-- method-in-group -->
+              <div class="method-in-group">
+                <span class="method-in-group-name">purposelyFailLoginFlow</span>
                 <br/>
               </div> <!-- method-in-group -->
             </div> <!-- test-group -->
@@ -250,20 +303,24 @@ data.addColumn('number', 'Number');
 data.addColumn('string', 'Method');
 data.addColumn('string', 'Class');
 data.addColumn('number', 'Time (ms)');
-data.addRows(2);
+data.addRows(3);
 data.setCell(0, 0, 0)
-data.setCell(0, 1, 'additional_Case')
+data.setCell(0, 1, 'purposelyFailLoginFlow')
 data.setCell(0, 2, 'testcases.Scenarios')
-data.setCell(0, 3, 872);
+data.setCell(0, 3, 517);
 data.setCell(1, 0, 1)
-data.setCell(1, 1, 'LoginFlow')
+data.setCell(1, 1, 'loginFlow')
 data.setCell(1, 2, 'testcases.Scenarios')
-data.setCell(1, 3, 108);
+data.setCell(1, 3, 264);
+data.setCell(2, 0, 2)
+data.setCell(2, 1, 'productListingVerification')
+data.setCell(2, 2, 'testcases.Scenarios')
+data.setCell(2, 3, 201);
 window.suiteTableData['Suite']= { tableData: data, tableDiv: 'times-div-Suite'}
 return data;
 }
               </script>
-              <span class="suite-total-time">Total running time: 980 ms</span>
+              <span class="suite-total-time">Total running time: 982 ms</span>
               <div id="times-div-Suite">
               </div> <!-- times-div-Suite -->
             </div> <!-- times-div -->
@@ -284,13 +341,13 @@ return data;
             <div class="ignored-class-div">
               <span class="ignored-class-name">testcases.Scenarios</span>
               <div class="ignored-methods-div">
-                <span class="ignored-method-name">sortingCheck</span>
-                <br/>
                 <span class="ignored-method-name">addingToCart</span>
                 <br/>
-                <span class="ignored-method-name">checkOut</span>
+                <span class="ignored-method-name">sortingCheck</span>
                 <br/>
-                <span class="ignored-method-name">productListingVerification</span>
+                <span class="ignored-method-name">additional_Case</span>
+                <br/>
+                <span class="ignored-method-name">checkOut</span>
                 <br/>
               </div> <!-- ignored-methods-div -->
             </div> <!-- ignored-class-div -->
@@ -308,32 +365,46 @@ return data;
                 <span class="method-start">0 ms</span>
               </div> <!-- configuration-suite before -->
               <div class="configuration-method before">
-                <span class="method-name">LoginToApplication</span>
-                <span class="method-start">197 ms</span>
+                <span class="method-name">loginToApplication</span>
+                <span class="method-start">217 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">LoginFlow</span>
-                <span class="method-start">10888 ms</span>
+                <span class="method-name">loginFlow</span>
+                <span class="method-start">27700 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
-                <span class="method-name">cleanUp([TestResult name=LoginFlow status=SUCCESS method=Scenarios.LoginFlow()[pri:0, instance:testcases.Sce...)</span>
-                <span class="method-start">10996 ms</span>
+                <span class="method-name">cleanUp([TestResult name=loginFlow status=SUCCESS method=Scenarios.loginFlow()[pri:0, instance:testcases.Sce...)</span>
+                <span class="method-start">27980 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-method before">
-                <span class="method-name">LoginToApplication</span>
-                <span class="method-start">11244 ms</span>
+                <span class="method-name">loginToApplication</span>
+                <span class="method-start">29302 ms</span>
               </div> <!-- configuration-method before -->
               <div class="test-method">
-                <span class="method-name">additional_Case</span>
-                <span class="method-start">20760 ms</span>
+                <span class="method-name">productListingVerification</span>
+                <span class="method-start">40710 ms</span>
               </div> <!-- test-method -->
               <div class="configuration-method after">
-                <span class="method-name">cleanUp([TestResult name=additional_Case status=SUCCESS method=Scenarios.additional_Case()[pri:5, instance:t...)</span>
-                <span class="method-start">21634 ms</span>
+                <span class="method-name">cleanUp([TestResult name=productListingVerification status=SUCCESS method=Scenarios.productListingVerificati...)</span>
+                <span class="method-start">40913 ms</span>
+              </div> <!-- configuration-method after -->
+              <div class="configuration-method before">
+                <span class="method-name">loginToApplication</span>
+                <span class="method-start">41157 ms</span>
+              </div> <!-- configuration-method before -->
+              <div class="test-method">
+                <img src="failed.png">
+                </img>
+                <span class="method-name">purposelyFailLoginFlow</span>
+                <span class="method-start">50096 ms</span>
+              </div> <!-- test-method -->
+              <div class="configuration-method after">
+                <span class="method-name">cleanUp([TestResult name=purposelyFailLoginFlow status=FAILURE method=Scenarios.purposelyFailLoginFlow()[pri...)</span>
+                <span class="method-start">50613 ms</span>
               </div> <!-- configuration-method after -->
               <div class="configuration-suite after">
                 <span class="method-name">cleanUp</span>
-                <span class="method-start">21937 ms</span>
+                <span class="method-start">51028 ms</span>
               </div> <!-- configuration-suite after -->
           </div> <!-- main-panel-content rounded-window-bottom -->
         </div> <!-- panel -->
